Added readme to webpage example.
- Added images to readme
- Added translation to Spanish too
- Changed `base.html` title to `Locked In Library`

--- a/zperk.t4/app/templates/base.html
+++ b/zperk.t4/app/templates/base.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>library</title>
+    <title>Locked In Library</title>
   </head>
   <body>
-    <h1>library</h1>
+    <h1>Locked In Library</h1>
     <nav>
       <a href="{{ url_for('main.index') }}">Home</a>
       <a href="{{ url_for('main.manage_users') }}">Users</a>
